Change to whiteish?

--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -51,7 +51,7 @@
 .login-box {
   width: 100%;
   padding: 1.5rem;
-  background-color: #ffe4e4;
+  background-color: #fff6f6;
   border-radius: 0.5rem;
   box-shadow: 0 0 0.5rem 0.2rem rgba(0, 0, 0, 0.4);
 }
