--- a/src/app/home/create/inspection/inspection.page.html
+++ b/src/app/home/create/inspection/inspection.page.html
@@ -36,7 +36,7 @@
         <ion-radio-group
           #areasradio
           class="section-data radio-group"
-          value="exterior"
+          value="undefined"
           (ionChange)="areasChange($event)"
         >
           <span><ion-radio value="exterior"></ion-radio> Exterior Only</span>
