--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -4,9 +4,9 @@ ion-header {
         // margin-left: calc((100vw - 3.3rem) / 2);
         height: 2.7rem;
         width: 2.7rem;
-        img {
-            box-shadow: 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
-        }
+        // a > img {
+        //     box-shadow: 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
+        // }
     }
 }
 
