--- a/src/app/home/detail/detail.page.html
+++ b/src/app/home/detail/detail.page.html
@@ -172,9 +172,9 @@
         </div>
       </div>
     </div>
-    <!-- POSTINGS -->
+    <!-- POSTING -->
     <div class="section-container">
-      <div class="section-title">Postings</div>
+      <div class="section-title">Posting</div>
       <div class="section-subtitle">
         Severe conditions endangering the overall building are grounds for an
         Unsafe posting. Localised service and overall Moderate conditions allow
