--- a/src/app/home/detail/detail.page.scss
+++ b/src/app/home/detail/detail.page.scss
@@ -1,3 +1,52 @@
-ion-checkbox {
-    --size: 24px;
+ion-header {
+    ion-avatar {
+        margin-left: 1rem;
+        // margin-left: calc((100vw - 3.3rem) / 2);
+        height: 2.7rem;
+        width: 2.7rem;
+        // a > img {
+        //     box-shadow: 0 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
+        // }
+    }
+}
+
+// ion-toolbar {
+//     --background: #9c1515;
+//     --color: #ffe4e4;
+// }
+  
+ion-tab-bar {
+    // --background: #9c1515;
+    --border: #5e0505;
+    --color: #ffe4e4;
+}
+
+ion-tab-button {
+    --color: #360606;
+    --color-focused: #9c1515;
+    --color-selected: #9c1515;
+}
+
+.fab-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(0, 0, 0, 0.75);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100%;
+    animation: all 1s;
+}
+
+// dark mode
+@media (prefers-color-scheme: dark) {
+    ion-tab-bar {
+        --color: #360606;
+    }
+
+    ion-tab-button {
+        --color: #ffe4e4;
+        --color-focused: #c93030;
+        --color-selected: #c93030;
+    }
 }
